--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div class="logo-img">
-      <a href="#">
+      <a href="#" aria-label="Return to homepage">
         <img src="images/logo.svg" alt="">
       </a>
     </div>
